Divide the main.c into 2 files so that when running cunit there isnt 2 main()

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,10 @@ before_script:
 build:
     stage: build
     script:
+        - make
 
 test:
     stage: test
     script:
+        - make test
+        - make valgrind
