--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 before_script:
     - apt-get update -qq
-    - apt-get install libcunit1 libcunit1-doc libcunit1-dev
+    - apt-get install --force-yes libcunit1 libcunit1-doc libcunit1-dev
 
 build:
     stage: build
