--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 before_script:
+    - apt-key update
     - apt-get update -qq
-    - apt-get install --force-yes libcunit1 libcunit1-doc libcunit1-dev
+    - apt-get install --allow-unauthenticated libcunit1 libcunit1-doc libcunit1-dev
 
 build:
     stage: build
